--- a/authentik/flows/templates/if/flow-sfe.html
+++ b/authentik/flows/templates/if/flow-sfe.html
@@ -22,6 +22,14 @@
           body {
             height: 100%;
           }
+          body {
+            background-image: url("{{ flow.background_url }}");
+            background-repeat: no-repeat;
+            background-size: cover;
+          }
+          .card {
+            padding: 3rem;
+          }
 
           .form-signin {
             max-width: 330px;
@@ -37,8 +45,11 @@
         </style>
     </head>
     <body class="d-flex align-items-center py-4 bg-body-tertiary">
-      <main class="form-signin w-100 m-auto" id="flow-sfe-container">
-      </main>
+      <div class="card m-auto">
+        <main class="form-signin w-100 m-auto" id="flow-sfe-container">
+        </main>
+        <a href="https://goauthentik.io?utm_source=authentik&amp;utm_medium=flow-sfe" class="mt-3 mb-0 text-muted text-center">Powered by authentik</a>
+      </div>
       <script src="{% static 'dist/sfe/index.js' %}"></script>
     </body>
 </html>
