fix logo rendering
Signed-off-by: Jens Langhammer <jens@goauthentik.io>

--- a/authentik/flows/templates/if/flow-sfe.html
+++ b/authentik/flows/templates/if/flow-sfe.html
@@ -40,7 +40,7 @@
             z-index: 2;
           }
           .brand-icon {
-            max-height: 72px;
+            max-width: 100%;
           }
         </style>
     </head>
