--- a/authentik/flows/templates/if/flow-sfe.html
+++ b/authentik/flows/templates/if/flow-sfe.html
@@ -15,6 +15,7 @@
         {% endblock %}
         <link rel="stylesheet" type="text/css" href="{% static 'dist/sfe/bootstrap.min.css' %}">
         <script src="{% static 'dist/sfe/jquery.min.js' %}"></script>
+        <script src="{% static 'dist/sfe/base64js.min.js' %}"></script>
         <meta name="sentry-trace" content="{{ sentry_trace }}" />
         {% include "base/header_js.html" %}
         <style>
