--- a/authentik/flows/templates/if/flow-sfe.html
+++ b/authentik/flows/templates/if/flow-sfe.html
@@ -47,7 +47,7 @@
       <div class="card m-auto">
         <main class="form-signin w-100 m-auto" id="flow-sfe-container">
         </main>
-        <a href="https://goauthentik.io?utm_source=authentik&amp;utm_medium=flow-sfe" class="mt-3 mb-0 text-muted text-center">Powered by authentik</a>
+        <a href="https://goauthentik.io?utm_source=authentik&amp;utm_medium=flow-sfe" rel="noopener noreferrer" class="mt-3 mb-0 text-muted text-center">Powered by authentik</a>
       </div>
       <script src="{% static 'dist/sfe/index.js' %}"></script>
     </body>
